--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
     </div>
   </div>
 
-  <script>
+ <!-- <script>
     async function sendMessage() {
       const input = document.getElementById("message");
       const messages = document.getElementById("messages");
@@ -406,7 +406,8 @@
         messages.appendChild(errorMsg);
       }
     }
-  </script>
+  </script>-->
+  <script src="app.js"></script>
   
 </body>
 </html>
